# ai-impact-visualization-be

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  env.sample  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 28218b15b8d7_initial_tables.py  40c1558f0359_added_indexes.py  995b54084ca8_remove_index.py
app/api/: health_checks.py  jira_issues.py  projects.py  routers.py  teams.py
app/cli/: __main__.py  add_all.py  add_commits.py  add_engineers.py  add_jira_issues.py  add_projects.py  add_repositories.py  add_teams.py
app/config/: logging.py  settings.py
app/db/: db.py
app/models/: __init__.py  commits.py  engineers.py  jira_issues.py  projects.py  repositories.py  teams.py
app/repositories/: base.py  jira_issues.py  projects.py  teams.py
app/schemas/: jira_issues.py  projects.py  teams.py
app/services/: jira_issues.py  projects.py  teams.py
app/tests/: conftest.py  test_jira_issues.py  test_projects.py  test_teams.py
